--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,5 +1,26 @@
-<picture>
-  <source media="(prefers-color-scheme: dark)" srcset="https://raw.githubusercontent.com/josuegeraldommfata/josuegeraldommfata/output/github-contribution-grid-snake-dark.svg">
-  <source media="(prefers-color-scheme: light)" srcset="https://raw.githubusercontent.com/josuegeraldommfata/josuegeraldommfata/output/github-contribution-grid-snake.svg">
-  <img alt="github contribution grid snake animation" src="https://raw.githubusercontent.com/josuegeraldommfata/josuegeraldommfata/output/github-contribution-grid-snake.svg">
-</picture>
+name: Cobrinha de Contribuição
+
+on:
+  push:
+    branches:
+      - main  # Ou a branch que você estiver usando
+
+jobs:
+  generate-snake:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checar o código
+      uses: actions/checkout@v2
+
+    - name: Instalar dependências
+      run: |
+        curl -s https://raw.githubusercontent.com/josuegeraldommfata/josuegeraldommfata/main/output/github-contribution-grid-snake.svg -o github-contribution-grid-snake.svg
+
+    - name: Commitar e enviar animação
+      run: |
+        git config --global user.name "Seu Nome"
+        git config --global user.email "seuemail@example.com"
+        git add github-contribution-grid-snake.svg
+        git commit -m "Atualizar animação da cobrinha"
+        git push
