--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -23,4 +23,5 @@ jobs:
         git config --global user.email "robsonalexmmfata@gmail.com"
         git add github-contribution-grid-snake.svg
         git commit -m "Atualizar animação da cobrinha"
-        git push
+       git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+
